test/classes/errors/nilability-init-var/init-var-oknil-owned-from-oknil-owned.chpl
//  lhs: owned?  rhs: owned?  ok

class MyClass {
  var x: int;
}

var rhs: owned MyClass?;

var lhs: owned MyClass? = rhs;


